feat: make notification after some events
